@@ -8,8 +8,10 @@ cdbs (0.4.43) unstable; urgency=low
     targets in buildcore rule, making it possible to programmatically
     change DEB_BUILDDIR.
   * Honour per-package DEB_BUILDDIR in makefile class.
+  * Use full path to python interpreter in python-distutils class
+    (Python Policy section 1.3.2).
 
- -- Jonas Smedegaard <dr@jones.dk>  Sun, 18 Jun 2006 01:26:50 +0200
+ -- Jonas Smedegaard <dr@jones.dk>  Sun, 18 Jun 2006 01:57:11 +0200
 
 cdbs (0.4.42) unstable; urgency=low
 
